src/objects/Campaign_Project_Studio__c.object
<CustomObject>
    <fields>
        <fullName>Campaign_Project__c</fullName>
        <label>Campaign Project</label>
        <referenceTo>Campaign_Project__c</referenceTo>
        <relationshipLabel>Campaign Project Studio Scopes</relationshipLabel>
        <relationshipName>Campaign_Project_Studio_Scopes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Final_Studio_File_Name_and_Location__c</fullName>
        <label>Final Studio File Name and Location</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <globalPicklist>Languages</globalPicklist>
        <label>Languages</label>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Number_of_Elements_Submitted__c</fullName>
        <label>Number of Elements Submitted</label>
        <summaryForeignKey>Campaign_Project_Studio_Element__c.Campaign_Project_Studio_Scope__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Reference_Previous_Project_Name__c</fullName>
        <label>Reference Previous Project Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sample_Images_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sample Images Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Studio_Copywriting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Studio Copywriting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Studio_Marked_Up_PDF_s_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Studio Marked Up PDF(s) Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Studio_Notes__c</fullName>
        <label>Studio Notes</label>
        <length>1200</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Studio_Project_Tier__c</fullName>
        <formula>Text(Campaign_Project__r.Studio_Project_Tier__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Studio Project Tier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Studio_Ship_Date__c</fullName>
        <label>Studio Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Translation_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Translation Needed</label>
        <type>Checkbox</type>
    </fields>
    <label>Campaign Project Studio Scope</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CPS-{0000}</displayFormat>
        <label>Campaign Project Studio  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Project Studio Scopes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>